syntax = "proto3";

service Client {
    rpc agreementRequest(AgreeRequestsMessage) returns (AgreementResult) {}
    rpc updateRequest(UpdateRequestsMessage) returns (UpdateResult) {}
    rpc confirmPayment(ConfirmRequestsMessage) returns (Result) {}
    rpc directChannelPayment(ChannelPayment) returns (DirectPaymentResult) {}
}

message AgreeRequestsMessage {
    bytes originalMessage = 3;
    bytes signature = 4;
}

message UpdateRequestsMessage{
    bytes originalMessage = 3;
    bytes signature = 4;
}

message ConfirmRequestsMessage{
    bytes originalMessage = 2;
    bytes signature = 3;
}

message ChannelPayment {
    int64 channelId = 1;
    int64 amount = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}

message ChannelPayments {
    repeated ChannelPayment channelPayments = 1;
}

message AgreementResult{
    bool result = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}

message UpdateResult{
    bool result = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}

message Result {
    int64 paymentNumber = 1;
    bool result = 2;
}

message DirectPaymentResult{
    bool result = 1;
    bytes replyMessage = 2;
    bytes replySignature = 3;
}